fix: as new react-slider module has a z-index of 1, settings pages are changed to a z-index of 2

--- a/src/assets/css/CcgChannelSettings.css
+++ b/src/assets/css/CcgChannelSettings.css
@@ -11,7 +11,7 @@
     border-style: solid;
     border-width: 4px;
 	text-align: center;
-	z-index: 1;
+	z-index: 2;
 
 	color: #fff;
 }
